--- a/master.css
+++ b/master.css
@@ -84,7 +84,7 @@ a:hover {
       padding: 1em;
       font-size: 16px;*/
 
-      float: left; */
+      /*float: left; */
 
       /* left: 7em; */
       top: 1.3em;
@@ -285,7 +285,7 @@ font-weight: bold;
 
 }
 .img-fluid {
-    max-width: 100%;
+    max-width: 70%;
     height: auto;
 
 }
